fix: card styling on smaller devices

--- a/src/components/Deck/styles.module.scss
+++ b/src/components/Deck/styles.module.scss
@@ -25,7 +25,7 @@
     max-height: 480px;
 
     @media all and (max-height: 725px) {
-      max-width: 290px;
+      max-width: 325px;
       max-height: 400px;
     }
 
